refactoring: configuration properties