@@ -4,12 +4,13 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.Getter;
+import lombok.RequiredArgsConstructor;
 import lombok.Setter;
+import mg.edbm.mail.config.properties.ServerProperties;
 import mg.edbm.mail.dto.response.MessageResponse;
 import mg.edbm.mail.filter.TokenRequestFilter;
 import mg.edbm.mail.repository.UserRepository;
 import mg.edbm.mail.service.TokenService;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpStatus;
@@ -34,29 +35,20 @@ import java.util.List;
 @EnableMethodSecurity(securedEnabled = true)
 @Getter
 @Setter
+@RequiredArgsConstructor
 public class SecurityConfig {
-    public static final Integer TOKEN_EXPIRATION_TIME = 30 * 60 * 1000;
-    public static final Integer TOKEN_SIZE = 32;
-    public static final String TOKEN_TYPE = "Bearer";
     public static final String ROLE_ADMIN = "ADMIN";
 
-    @Value("${mg.edbm.mail.config.allowed-origins}")
-    private String[] allowedOrigins;
-
     private final UserRepository userRepository;
+    private final ServerProperties serverProperties;
 
-    public SecurityConfig(UserRepository userRepository) {
-        this.userRepository = userRepository;
-    }
-
-    public void handleAuthentificationException(HttpServletRequest request,
+    public static void handleAuthentificationException(HttpServletRequest request,
                                                 HttpServletResponse response,
                                                 Exception authException) throws IOException {
         final ObjectMapper objectMapper = new ObjectMapper();
         final MessageResponse messageResponse = new MessageResponse("Authentication failed");
         response.setStatus(HttpStatus.UNAUTHORIZED.value());
         response.setContentType("application/json;charset=UTF-8");
-        response.setHeader("WWW-Authenticate", "Bearer ...");
         response.getWriter().write(objectMapper.writeValueAsString(messageResponse));
     }
 
@@ -64,10 +56,9 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of(getAllowedOrigins()));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
-        //configuration.setAllowCredentials(true);
+        configuration.setAllowedOrigins(List.of(serverProperties.ALLOWED_ORIGINS));
+        configuration.setAllowedMethods(Arrays.asList(serverProperties.ALLOWED_METHODS));
+        configuration.setAllowedHeaders(Arrays.asList(serverProperties.ALLOWED_HEADERS));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
@@ -93,7 +84,7 @@ public class SecurityConfig {
                 )
                 .exceptionHandling(
                         exceptionHandling -> exceptionHandling
-                                .authenticationEntryPoint(this::handleAuthentificationException)
+                                .authenticationEntryPoint(SecurityConfig::handleAuthentificationException)
                 )
                 .build();
     }
